# OpenClaw-Desktop-Assistant-for-Non-Technical-Users

./: .gitignore  README.md  build_output.txt  cargo_output.txt  cargo_output2.txt  cargo_output3.txt  cargo_output4.txt  cargo_output5.txt  cargo_output6.txt  index.html  package-lock.json  package.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AgentPanel.jsx  ChatPanel.jsx  LogsPanel.jsx  SchedulePanel.jsx  SettingsPanel.jsx
src/services/: llm.js  openclaw.js
src/utils/: executionOutput.js  formatters.js  storage.js
